# octahedral-embed

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
octahedral_embed/: __init__.py
src/octahedral_embed/: __init__.py  bond_distance_check.py  constrained_embed.py  construction.py  input_checks.py  isoctahedral.py  isomer.py  stereo.py  templates.py
