[project]
name = "octahedral-embed"
version = "0.0.0"
description = "Geometry generation for iridium-based phosphorescent emitter molecules (RDKit template-constrained embedding with fac/mer control)."
requires-python = ">=3.9"
dependencies = [
    "rdkit>=2022.9.5",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
