[metadata]
name = octahedral-embed
version = 0.0.0
description = Geometry generation for iridium-based phosphorescent emitter molecules (RDKit template-constrained embedding with fac/mer control).
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.9

[options.extras_require]
rdkit =
    rdkit-pypi>=2022.9.5

[options.package_data]
octahedral_embed =
    *.mol2
